--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,9 @@
   },
   "require": {
     "twig/twig": "^1.0"
+  },
+  "require-dev": {
+    "symfony/phpunit-bridge": "~2.7",
+    "symfony/debug": "~2.7"
   }
 }
