Travis - additional setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,14 @@ php:
     - 5.6
     - 7.0
     - hhvm
+
+before_install:
+  - composer self-update
+
+install: composer update --prefer-source $COMPOSER_FLAGS
+
+script: phpunit --coverage-clover=coverage.clover
+
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
