--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ cache:
         - $HOME/.composer/cache
 
 php:
-    - 5.3
     - 5.4
     - 5.5
     - 5.6
@@ -25,3 +24,7 @@ script: phpunit --coverage-clover=coverage.clover
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
   - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+
+matrix:
+    allow_failures:
+        - php: 7.0
