--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,12 @@
     }
   },
   "require": {
+    "php": ">=5.4",
     "twig/twig": "^1.0"
   },
   "require-dev": {
     "symfony/phpunit-bridge": "~2.7",
-    "symfony/debug": "~2.7"
+    "symfony/debug": "~2.7",
+    "phpunit/phpunit": ">=4.8"
   }
 }
