--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,4 +2,10 @@ checks:
     php:
         code_rating: true
         duplication: true
-
+filter:
+  paths: [src/*]
+checks:
+  php: true
+tools:
+  external_code_coverage:
+    runs: 2
