--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,30 @@
 language: php
 
+php:
+  - 7.0
+  - 7.1
+  - hhvm
+
 sudo: false
 
-cache:
-    directories:
-        - vendor
-        - $HOME/.composer/cache
+matrix:
+    allow_failures:
+        - php: hhvm
 
-php:
-    - 5.4
-    - 5.5
-    - 5.6
-    - 7.0
-    - hhvm
+cache:
+  directories:
+    - $HOME/.composer/cache
 
 before_install:
   - composer self-update
 
-install: composer update --prefer-source $COMPOSER_FLAGS
+install: composer update --prefer-source
 
 script: phpunit --coverage-clover=coverage.clover
 
 after_script:
-  - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
-
-matrix:
-    allow_failures:
-        - php: 7.0
+  - |
+    if [[ "$TRAVIS_PHP_VERSION" != 'hhvm' ]]; then
+      wget https://scrutinizer-ci.com/ocular.phar
+      php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+    fi
