--- a/composer.json
+++ b/composer.json
@@ -1,39 +1,45 @@
 {
-  "name": "runopencode/twig-bufferized-template",
-  "description": "Delay and reorder execution of Twig template portions.",
-  "keywords": ["twig", "twig extension", "output buffer"],
-  "type": "library",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Nikola Svitlica a.k.a TheCelavi",
-      "email": "thecelavi@gmail.com",
-      "homepage": "http://www.runopencode.com",
-      "role": "Project lead"
+    "name": "runopencode/twig-bufferized-template",
+    "description": "Delay and reorder execution of Twig template portions.",
+    "keywords": ["twig", "twig extension", "output buffer"],
+    "type": "library",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Nikola Svitlica a.k.a TheCelavi",
+            "email": "thecelavi@gmail.com",
+            "homepage": "http://www.runopencode.com",
+            "role": "Project lead"
+        },
+        {
+            "name": "RunOpenCode members",
+            "email": "support@runopencode.com",
+            "homepage": "http://www.runopencode.com"
+        }
+    ],
+    "autoload": {
+        "psr-4": {
+            "RunOpenCode\\Twig\\BufferizedTemplate\\": "src/RunOpenCode/Twig/BufferizedTemplate/"
+        }
     },
-    {
-      "name": "RunOpenCode members",
-      "email": "support@runopencode.com",
-      "homepage": "http://www.runopencode.com"
+    "autoload-dev": {
+        "psr-4": {
+            "RunOpenCode\\Twig\\BufferizedTemplate\\Tests\\": "test/"
+        }
+    },
+    "require": {
+        "php": ">=7.0",
+        "twig/twig": "^1.2|~2.0",
+        "roave/security-advisories": "dev-master"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~6.0",
+        "squizlabs/php_codesniffer": "~2.0",
+        "phploc/phploc": "dev-master",
+        "pdepend/pdepend" : "~2.5",
+        "phpmd/phpmd" : "@stable",
+        "sebastian/phpcpd": "dev-master",
+        "theseer/phpdox": "dev-master",
+        "escapestudios/symfony2-coding-standard": "~2.0"
     }
-  ],
-  "autoload": {
-    "psr-4": {
-      "RunOpenCode\\Twig\\BufferizedTemplate\\": "src/RunOpenCode/Twig/BufferizedTemplate/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "RunOpenCode\\Twig\\BufferizedTemplate\\Tests\\": "test/"
-    }
-  },
-  "require": {
-    "php": ">=5.4",
-    "twig/twig": "^1.0"
-  },
-  "require-dev": {
-    "symfony/phpunit-bridge": "~2.7",
-    "symfony/debug": "~2.7",
-    "phpunit/phpunit": ">=4.8"
-  }
 }
